# Arranger

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
arranger/: __main__.py  config.py  database.py  logging_config.py  main.py  models.py
arranger/api/: management.py  routes.py  ui.py  webhooks.py
arranger/clients/: base.py  radarr.py  sonarr.py
arranger/rules/: engine.py  matchers.py
arranger/safety/: common.py  radarr.py  sonarr.py
arranger/services/: audit.py  config_store.py  health.py  moves.py
arranger/static/: app.css  app.js
arranger/templates/ui/: base.html  dashboard.html  help.html  history.html  logs.html  onboarding.html  queue.html  rules.html  settings.html
arranger/workers/: move_queue.py  scheduler.py  sonarr_worker.py
config/: arranger.example.yaml
tests/: test_dry_run.py  test_radarr_decisions.py  test_rules.py  test_sonarr_safety.py  test_ui_and_management.py
