[project]
name = "arranger"
version = "0.1.0"
description = "API-driven Radarr/Sonarr media root folder arranger"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.23.0", "ruff>=0.6.0", "mypy>=1.11.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["arranger*"]
exclude = ["tests*", "config*"]

[tool.setuptools.package-data]
arranger = ["templates/**/*.html", "static/*"]
